--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Insert Post</title>
 	</head>
 	<body>
-		<form method="post">
+		<form method="post" action="content.php">
 		<p>
 			<input type="text" name="post_title"/>
 		</p>
